se añadieron estilos

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,5 +1,57 @@
-body
-{
-    width: 50%;
+html {
+    background-color: #202020;
+    font-family: 'proxima-nova', sans-serif;
+}
+
+body {
+    width: 58%;
     margin: auto;
+    background-color: white;
+}
+
+#titulo {
+    position: relative;
+    text-align: center;
+}
+
+h1 {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-weight: 500;
+}
+
+#titulo>h1 {
+    color: white;
+    font-size: 5em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -110%);
+}
+
+.parrafo_linea_negra {
+    border-bottom: 2px solid #959595;
+    margin: auto;
+}
+
+section {
+    width: 83%;
+    margin: auto;
+    font-size: 22px;
+}
+
+#seccion_presentacion>p {
+    text-align: center;
+    line-height: 0.6;
+}
+
+header>img {
+    width: 100%;
+}
+
+p img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
